WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
62236
[Chromium] WebAccessibilityObject needs access to line breaks in multiline text
https://bugs.webkit.org/show_bug.cgi?id=62236
Summary
[Chromium] WebAccessibilityObject needs access to line breaks in multiline text
Dominic Mazzoni
Reported
2011-06-07 15:21:13 PDT
AccessibilityObject exposes dozens of low-level functions for dealing with multiline text. Rather than expose all of them, we should expose just the minimum interface we need in WebAccessibilityObject.
Attachments
Patch adds a method to return the indices of line breaks within the text content.
(2.68 KB, patch)
2011-06-07 17:23 PDT
,
Dominic Mazzoni
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dominic Mazzoni
Comment 1
2011-06-07 17:23:25 PDT
Created
attachment 96332
[details]
Patch adds a method to return the indices of line breaks within the text content.
WebKit Review Bot
Comment 2
2011-06-08 08:53:10 PDT
Comment on
attachment 96332
[details]
Patch adds a method to return the indices of line breaks within the text content. Clearing flags on attachment: 96332 Committed
r88351
: <
http://trac.webkit.org/changeset/88351
>
WebKit Review Bot
Comment 3
2011-06-08 08:53:14 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug