2011-06-08  Dominic Mazzoni  <dmazzoni@google.com>

Reviewed by Dimitri Glazkov.

        Add a method to return the line breaks for any element with
        multiline text content.
        https://bugs.webkit.org/show_bug.cgi?id=62236

        * public/WebAccessibilityObject.h:
        * src/WebAccessibilityObject.cpp:
        (WebKit::WebAccessibilityObject::lineBreaks):

Canonical link: https://commits.webkit.org/77773@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@88351 268f45cc-cd09-0410-ab3c-d52691b4dbfc